# hadoop-lzo

./: .gitattributes  .gitignore  .travis.yml  CHANGES.txt  NOTICE.txt  README  README.md  build.xml  ivy.xml  pom.xml
docker/: Dockerfile  README.md  docker-compose.yaml
ivy/: ivysettings.xml  libraries.properties
src/: get_build_revision.sh
src/java/com/hadoop/compression/lzo/: CChecksum.java  DChecksum.java  DistributedIndexer.java  DistributedLzoIndexer.java  GPLNativeCodeLoader.java  ILzopDecompressor.java  LzoBasicIndexSerde.java  LzoCodec.java  LzoCompressor.java  LzoDecompressor.java  LzoDefaults.java  LzoIndex.java  LzoIndexSerde.java  LzoIndexer.java  LzoInputFormatCommon.java  LzoTinyOffsetsSerde.java  LzopCodec.java  LzopDecompressor.java  LzopIndexedOutputStream.java  LzopInputStream.java  LzopOutputStream.java
src/java/com/hadoop/compression/lzo/jna/: LzoCodec.java  LzoCompressor.java  LzoDecompressor.java  LzoJna.java  LzoLibrary.java  LzopCodec.java  LzopDecompressor.java  LzopInputStream.java  LzopOutputStream.java
src/java/com/hadoop/compression/lzo/util/: CompatibilityUtil.java
src/java/com/hadoop/mapred/: DeprecatedLzoLineRecordReader.java  DeprecatedLzoTextInputFormat.java  LzoStreamingInputFormat.java  LzoStreamingLineRecordReader.java
src/java/com/hadoop/mapreduce/: LzoIndexOutputFormat.java  LzoIndexRecordWriter.java  LzoLineRecordReader.java  LzoSplitRecordReader.java  LzoTextInputFormat.java
src/java/com/quicklz/: QuickLZ.java
src/java/org/apache/hadoop/io/compress/: LzoCodec.java
src/main/java/com/hadoop/compression/lzo/: CChecksum.java  DChecksum.java  DistributedLzoIndexer.java  GPLNativeCodeLoader.java  LzoBasicIndexSerde.java  LzoCodec.java  LzoCompressor.java  LzoDecompressor.java  LzoIndex.java  LzoIndexer.java  LzoInputFormatCommon.java  LzoTinyOffsetsSerde.java  LzopCodec.java  LzopDecompressor.java  LzopInputStream.java  LzopOutputStream.java  Varint.java
src/main/java/com/hadoop/compression/lzo/util/: CompatibilityUtil.java
src/main/java/com/hadoop/mapred/: DeprecatedLzoLineRecordReader.java  DeprecatedLzoTextInputFormat.java
src/main/java/com/hadoop/mapreduce/: LzoLineRecordReader.java  LzoSplitInputFormat.java  LzoSplitRecordReader.java  LzoTextInputFormat.java
src/main/java/com/quicklz/: QuickLZ.java
src/main/java/org/apache/hadoop/io/compress/: LzoCodec.java
src/main/native/: Makefile.am  Makefile.in  bootstrap.sh  configure  configure.ac  gplcompression.sln  gplcompression.vcxproj  packageNativeHadoop.sh
src/main/native/config/: config.guess  config.sub  ltmain.sh
src/main/native/impl/: config.h.in  gpl-compression.h
src/main/native/impl/lzo/: LzoCompressor.c  LzoDecompressor.c  lzo.h
src/main/native/m4/: compression_utils.m4  libtool.m4
src/native/: .autom4te.cfg  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  packageNativeHadoop.sh
src/native/impl/: config.h.in  gpl-compression.h
src/native/impl/lzo/: LzoCompressor.c  LzoDecompressor.c
src/native/m4/: compression_utils.m4
src/test/com/hadoop/compression/lzo/: TestLzoCodec.java  TestLzoIndexSerde.java  TestLzoRandData.java  TestLzopInputStream.java  TestLzopOutputStream.java
src/test/com/hadoop/mapreduce/: TestLzoTextInputFormat.java
src/test/data/: 100.txt.lzo  1000.txt.lzo  issue20-lzop.txt
src/test/java/com/hadoop/compression/lzo/: TestDistLzoIndexerJobName.java  TestDistributedLzoIndexer.java  TestLzoCodec.java  TestLzoIndexSerde.java  TestLzoRandData.java  TestLzopCodec.java  TestLzopInputStream.java  TestLzopOutputStream.java
src/test/java/com/hadoop/mapreduce/: TestLzoTextInputFormat.java  TestLzoTextInputFormatDelimiter.java
src/test/resources/: log4j.properties
src/test/resources/data/: 0.txt.lzo  100000-truncated.txt  100000-truncated.txt.lzo  100000.txt.lzo
